move validator & deserializers in models lib