@@ -1,52 +1,34 @@
-package com.hubsante.hub.service;
+package com.hubsante.model;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.hubsante.hub.HubApplication;
-import com.hubsante.hub.exception.SchemaValidationException;
-import com.hubsante.model.cisu.CreateCaseMessage;
 import com.hubsante.model.edxl.EdxlMessage;
-import com.hubsante.model.edxl.ContentMessage;
 import lombok.extern.slf4j.Slf4j;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.springframework.amqp.rabbit.test.context.SpringRabbitTest;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.SpringBootConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.DynamicPropertyRegistry;
-import org.springframework.test.context.DynamicPropertySource;
+//import org.springframework.beans.factory.annotation.Autowired;
+//import org.springframework.boot.SpringBootConfiguration;
+//import org.springframework.boot.test.context.SpringBootTest;
+//import org.springframework.test.context.ContextConfiguration;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.time.OffsetDateTime;
-import java.util.Objects;
 
-import static com.hubsante.hub.config.Constants.EDXL_SCHEMA;
-import static com.hubsante.hub.config.Constants.ENVELOPE_SCHEMA;
-import static com.hubsante.hub.service.utils.TestFileUtils.getMessageString;
-import static org.junit.jupiter.api.Assertions.*;
-
+import static com.hubsante.model.utils.TestFileUtils.getMessageString;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @Slf4j
-@SpringBootTest
-@SpringBootConfiguration
-@ContextConfiguration(classes = HubApplication.class)
-@SpringRabbitTest
+//@SpringBootTest
+//@ContextConfiguration(classes = ModelApplication.class)
+//@SpringBootConfiguration
 public class EdxlHandlerTest {
 
     static ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
 
-    @Autowired
-    private EdxlHandler converter;
-
-    @DynamicPropertySource
-    static void registerPgProperties(DynamicPropertyRegistry propertiesRegistry) {
-        propertiesRegistry.add("client.preferences.file",
-                () -> Objects.requireNonNull(classLoader.getResource("config/client.preferences.csv")));
-    }
+//    @Autowired
+    private EdxlHandler converter = new EdxlHandler();
 
     @Test
     @DisplayName("should consistently deserialize then serialize JSON RC-EDA")
@@ -65,7 +47,7 @@ public class EdxlHandlerTest {
     @Test
     @DisplayName("should consistently deserialize then serialize JSON RC-REF")
     public void end2end_RC_REF_JSON() throws IOException {
-        String json =getMessageString(true, "RC-REF", false);
+        String json = getMessageString(true, "RC-REF", false);
         endToEndDeserializationCheck(json, false);
     }
 
@@ -79,7 +61,7 @@ public class EdxlHandlerTest {
     @Test
     @DisplayName("should consistently deserialize then serialize JSON RS-INFO")
     public void end2end_RS_INFO_JSON() throws IOException {
-        String json =getMessageString(true, "RS-INFO", false);
+        String json = getMessageString(true, "RS-INFO", false);
         endToEndDeserializationCheck(json, false);
     }
 
@@ -93,8 +75,8 @@ public class EdxlHandlerTest {
     @Test
     @DisplayName("should add XML prefix")
     public void verifyXmlPrefix() throws IOException {
-        File jsonFile = new File(classLoader.getResource("messages/valid/RC-EDA/RC-EDA.json").getFile());
-        String json = Files.readString(jsonFile.toPath());
+        File jsonFile = new File(classLoader.getResource("sample/valid/RC-EDA/RC-EDA.json").getFile());
+        String json = new String(Files.readAllBytes(jsonFile.toPath()), StandardCharsets.UTF_8);
 
         EdxlMessage messageFromInput = converter.deserializeJsonEDXL(json);
         String xml = converter.serializeXmlEDXL(messageFromInput);
