@@ -1,51 +1,40 @@
-package com.hubsante.hub.service;
+package com.hubsante.model;
 
-import com.hubsante.hub.HubApplication;
-import com.hubsante.hub.exception.SchemaValidationException;
-import com.hubsante.model.cisu.CreateCaseMessage;
+import com.hubsante.model.exception.ValidationException;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.springframework.amqp.rabbit.test.context.SpringRabbitTest;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.SpringBootConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.DynamicPropertyRegistry;
-import org.springframework.test.context.DynamicPropertySource;
+//import org.springframework.beans.factory.annotation.Autowired;
+//import org.springframework.boot.SpringBootConfiguration;
+//import org.springframework.boot.test.context.SpringBootTest;
+//import org.springframework.test.context.ContextConfiguration;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.Objects;
 
-import static com.hubsante.hub.config.Constants.EDXL_SCHEMA;
-import static com.hubsante.hub.config.Constants.ENVELOPE_SCHEMA;
-import static com.hubsante.hub.service.utils.TestFileUtils.getMessageString;
+import static com.hubsante.model.config.Constants.EDXL_SCHEMA;
+import static com.hubsante.model.config.Constants.ENVELOPE_SCHEMA;
+import static com.hubsante.model.utils.TestFileUtils.getMessageString;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @Slf4j
-@SpringBootTest
-@SpringBootConfiguration
-@ContextConfiguration(classes = HubApplication.class)
-@SpringRabbitTest
+//@SpringBootTest
+//@ContextConfiguration(classes = ModelApplication.class)
+//@SpringBootConfiguration
 public class ValidatorTest {
     static ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
 
-    @Autowired
-    private Validator validator;
-    @DynamicPropertySource
-    static void registerPgProperties(DynamicPropertyRegistry propertiesRegistry) {
-        propertiesRegistry.add("client.preferences.file",
-                () -> Objects.requireNonNull(classLoader.getResource("config/client.preferences.csv")));
-    }
+//    @Autowired
+    private final Validator validator = new Validator();
 
     /*
-    * For now we chose to be a little verbose and test each message type separately,
-    * to best identify eventual errors & postpone xsd validation
-    * We could later use an array of UseCases and iterate over it in a single test
-    * It will be relevant when first UseCases will be stable and we will be in an incremental development phase
+     * For now we chose to be a little verbose and test each message type separately,
+     * to best identify eventual errors & postpone xsd validation
+     * We could later use an array of UseCases and iterate over it in a single test
+     * It will be relevant when first UseCases will be stable and we will be in an incremental development phase
      */
     @Test
     @DisplayName("RC-EDA validation passes")
@@ -60,7 +49,7 @@ public class ValidatorTest {
     @DisplayName("RC-EDA validation fails")
     public void jsonRcEdaValidationFails() throws IOException {
         String input = getMessageString(false, "RC-EDA", false);
-        assertThrows(SchemaValidationException.class, () -> validator.validateJSON(input, EDXL_SCHEMA));
+        assertThrows(ValidationException.class, () -> validator.validateJSON(input, EDXL_SCHEMA));
 
         // TODO bbo: add XML validation
     }
@@ -78,7 +67,7 @@ public class ValidatorTest {
     @DisplayName("RC-REF validation fails")
     public void jsonRcRefValidationFails() throws IOException {
         String input = getMessageString(false, "RC-REF", false);
-        assertThrows(SchemaValidationException.class, () -> validator.validateJSON(input, EDXL_SCHEMA));
+        assertThrows(ValidationException.class, () -> validator.validateJSON(input, EDXL_SCHEMA));
 
         // TODO bbo: add XML validation
     }
@@ -96,7 +85,7 @@ public class ValidatorTest {
     @DisplayName("RS-INFO validation fails")
     public void jsonRsInfoValidationFails() throws IOException {
         String input = getMessageString(false, "RS-INFO", false);
-        assertThrows(SchemaValidationException.class, () -> validator.validateJSON(input, EDXL_SCHEMA));
+        assertThrows(ValidationException.class, () -> validator.validateJSON(input, EDXL_SCHEMA));
 
         // TODO bbo: add XML validation
     }
@@ -104,13 +93,11 @@ public class ValidatorTest {
     @Test
     @DisplayName("invalid content valid enveloppe")
     public void invalidContentValidEnvelopeTest() throws IOException {
-        File invalidFile = new File(classLoader.getResource("messages/failing/RC-EDA/invalid-RC-EDA-valid-EDXL.json").getFile());
-        String json = Files.readString(invalidFile.toPath());
+        File invalidFile = new File(classLoader.getResource("sample/failing/RC-EDA/invalid-RC-EDA-valid-EDXL.json").getFile());
+        String json = new String(Files.readAllBytes(invalidFile.toPath()), StandardCharsets.UTF_8);
 
         // envelope validation does not throw because envelope is ok
         assertDoesNotThrow(() -> validator.validateJSON(json, ENVELOPE_SCHEMA));
-        assertThrows(SchemaValidationException.class, () -> validator.validateJSON(json, EDXL_SCHEMA));
+        assertThrows(ValidationException.class, () -> validator.validateJSON(json, EDXL_SCHEMA));
     }
-
-
 }
